Index page modified

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <!-- Top left float -->
             <div class="float-left">
                 <div class="bar-icon">
-                    <img src="../img/bar-icon.png" alt="" class="bar-img">
+                    <img src="./img/bar-icon.png" alt="" class="bar-img">
                 </div>
                 <div class="youtube-logo">
-                    <img src="../img/ytlogo.png" alt="">
+                    <img src="./img/ytlogo.png" alt="">
                 </div>
                 <div class="search-bar">
                     <input type="text" placeholder="search" class="search">
@@ -27,10 +27,10 @@
             <!-- Top left float ends -->
             <!-- Top right float starts -->
             <div class="float-right">
-                <div class="mic-icon"><img src="../img/mic.png" alt=""></div>
-                <div class="record-icon"><img src="../img/record.png" alt=""></div>
-                <div class="grid-icon"><img src="../img/grid.png" alt=""></div>
-                <div class="notification"><img src="../img/notification.png" alt=""></div>
+                <div class="mic-icon"><img src="./img/mic.png" alt=""></div>
+                <div class="record-icon"><img src="./img/record.png" alt=""></div>
+                <div class="grid-icon"><img src="./img/grid.png" alt=""></div>
+                <div class="notification"><img src="./img/notification.png" alt=""></div>
                 <div class="sign-in"><button class="btn-signin">sign-in</button></div>
             </div>
             <!-- Top right float ends -->
@@ -39,10 +39,10 @@
         <!-- Side bar code start here -->
         <div class="all-contain">
             <div class="side-bar">
-                <div><a href="https://www.youtube.com/"><img src="../img/home.png" alt=""></a></div>
-                <div><a href="https://www.youtube.com/feed/explore"><img src="../img/explore.png" alt=""></a></div>
-                <div><a href="https://www.youtube.com/feed/subscriptions"><img src="../img/subscription.png" alt=""></a></div>
-                <div><a href="https://www.youtube.com/feed/library"><img src="../img/library.png" alt=""></a></div>
+                <div><a href="https://www.youtube.com/"><img src="./img/home.png" alt=""></a></div>
+                <div><a href="https://www.youtube.com/feed/explore"><img src="./img/explore.png" alt=""></a></div>
+                <div><a href="https://www.youtube.com/feed/subscriptions"><img src="./img/subscription.png" alt=""></a></div>
+                <div><a href="https://www.youtube.com/feed/library"><img src="./img/library.png" alt=""></a></div>
             </div>
             <div class="catagory">
                 <div class="cat" id="first-cat">HEllo</div>
@@ -62,8 +62,8 @@
             <div class="videos-container">
                 <div class="videos">
                     <div class="video">
-                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
-                        <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
+                        <div class="contain-img"><img src="./img/blackhole.png" alt="" class="img-custom"></div>
+                        <div class="creator"><img src="./img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
                             <div class="detail">The Blackhole</div>
                             <div class="channel-name">
@@ -74,8 +74,8 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
-                        <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
+                        <div class="contain-img"><img src="./img/blackhole.png" alt="" class="img-custom"></div>
+                        <div class="creator"><img src="./img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
                             <div class="detail">The Blackhole</div>
                             <div class="channel-name">
@@ -86,8 +86,8 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
-                        <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
+                        <div class="contain-img"><img src="./img/blackhole.png" alt="" class="img-custom"></div>
+                        <div class="creator"><img src="./img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
                             <div class="detail">The Blackhole</div>
                             <div class="channel-name">
@@ -98,8 +98,8 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
-                        <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
+                        <div class="contain-img"><img src="./img/blackhole.png" alt="" class="img-custom"></div>
+                        <div class="creator"><img src="./img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
                             <div class="detail">The Blackhole</div>
                             <div class="channel-name">
@@ -110,8 +110,8 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
-                        <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
+                        <div class="contain-img"><img src="./img/blackhole.png" alt="" class="img-custom"></div>
+                        <div class="creator"><img src="./img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
                             <div class="detail">The Blackhole</div>
                             <div class="channel-name">
@@ -122,8 +122,8 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
-                        <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
+                        <div class="contain-img"><img src="./img/blackhole.png" alt="" class="img-custom"></div>
+                        <div class="creator"><img src="./img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
                             <div class="detail">The Blackhole</div>
                             <div class="channel-name">
@@ -134,8 +134,8 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
-                        <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
+                        <div class="contain-img"><img src="./img/blackhole.png" alt="" class="img-custom"></div>
+                        <div class="creator"><img src="./img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
                             <div class="detail">The Blackhole</div>
                             <div class="channel-name">
@@ -146,8 +146,8 @@
                         </div>
                     </div>
                     <div class="video">
-                        <div class="contain-img"><img src="../img/blackhole.png" alt="" class="img-custom"></div>
-                        <div class="creator"><img src="../img/kwar.png" alt="" class="creator-icon"></div>
+                        <div class="contain-img"><img src="./img/blackhole.png" alt="" class="img-custom"></div>
+                        <div class="creator"><img src="./img/kwar.png" alt="" class="creator-icon"></div>
                         <div class="all-details">
                             <div class="detail">The Blackhole</div>
                             <div class="channel-name">
